<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/topcorner">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="Cafe Murah"
        android:textColor="#17B006"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/text_popup"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:theme="@style/RadioGroupStyle">

        <RadioButton
            android:id="@+id/rb_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_daftar"
            android:textSize="16sp"
            android:textColor="#000000"
            android:checked="true"
            android:layout_marginTop="5dp"
            android:theme="@style/RadioGroupStyle"/>

        <RadioButton
            android:id="@+id/rb_tidakdaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_tidakdaftar"
            android:textSize="16sp"
            android:theme="@style/RadioGroupStyle"
            android:textColor="#000000"
            android:layout_marginTop="5dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/ket_caps"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_keterangan"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="top|start"
        android:hint="@string/hint_keterangan"
        android:lines="10"
        android:textSize="18sp"
        android:theme="@style/RadioGroupStyle"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/simpan"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>