<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/topcorner">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Masukkan Nama Anda"
        android:textColor="@color/black"
        android:textSize="@dimen/text_big"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:theme="@style/RadioGroupStyle"
        android:text=""
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Masukkan Nomor Telepon Anda"
        android:textColor="@color/black"
        android:textSize="@dimen/text_big"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_small"/>

    <EditText
        android:id="@+id/editTextKontak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:theme="@style/RadioGroupStyle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Masukkan Password Baru"
        android:textColor="@color/black"
        android:textSize="@dimen/text_big"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_small"/>

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:theme="@style/RadioGroupStyle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBatal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btnSimpan"
            android:background="@null"
            android:text="@string/batal"/>

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:background="@null"
            android:textColor="@color/hijau"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="5dp"
        android:text="@string/fulldata"
        android:textSize="@dimen/text_mid"/>

</LinearLayout>