<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MenuPendaftaran.PutusanPendaftaranActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueLight"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/AppTheme.NoActionBar.TitleTextStyle">

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/nama_merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/nama"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium" />

        <TextView
            android:id="@+id/txt_nama_merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custom_edt2"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium" />

        <TextView
            android:id="@+id/nama_pemilik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/pemilik"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium" />

        <TextView
            android:id="@+id/txt_nama_pemilik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custom_edt2"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium" />

        <TextView
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/alamat"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium" />

        <TextView
            android:id="@+id/txt_alamat_merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custom_edt2"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/text_popup"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:theme="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/rb_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_daftar"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="5dp"
                android:theme="@style/RadioGroupStyle"/>

            <RadioButton
                android:id="@+id/rb_tidakdaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_tidakdaftar"
                android:textSize="16sp"
                android:theme="@style/RadioGroupStyle"
                android:textColor="#000000"
                android:layout_marginTop="5dp"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_setuju"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/formLengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Isi Kelengkapan Data"
                android:background="@drawable/custom_button2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_menolak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="40dp">

            <TextView
                android:id="@+id/textket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/ket_caps"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="Tulis keterangan kenapa merchant menolak"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="top|start"
                android:hint="Tulis keterangan disini"
                android:lines="10"
                android:textSize="18sp"
                android:theme="@style/RadioGroupStyle"/>

            <Button
                android:id="@+id/button_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button2"
                android:layout_marginTop="20dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/simpan"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>